feat: 정산 테스트 코드 작성